<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


      <TextView
            android:id="@+id/status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_In_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            />

        



</RelativeLayout>