package com.example.user.myapplication;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.InstrumentationRegistry.getInstrumentation;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest2 {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>( MainActivity.class );

    @Test
    public void mainActivityTest2() {
        ViewInteraction wf = onView(
                allOf( withText( "Sign in" ),
                        childAtPosition(
                                allOf( withId( R.id.sign_In_Button ),
                                        childAtPosition(
                                                withClassName( is( "android.widget.RelativeLayout" ) ),
                                                1 ) ),
                                0 ),
                        isDisplayed() ) );
        wf.perform( click() );

        ViewInteraction wf2 = onView(
                allOf( withText( "Sign in" ),
                        childAtPosition(
                                allOf( withId( R.id.sign_In_Button ),
                                        childAtPosition(
                                                withClassName( is( "android.widget.RelativeLayout" ) ),
                                                1 ) ),
                                0 ),
                        isDisplayed() ) );
        wf2.perform( click() );

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep( 3598623 );
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction floatingActionButton = onView(
                allOf( withId( R.id.floatActionBtn ),
                        childAtPosition(
                                childAtPosition(
                                        withId( android.R.id.content ),
                                        0 ),
                                1 ),
                        isDisplayed() ) );
        floatingActionButton.perform( click() );

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep( 3590295 );
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction appCompatEditText = onView(
                allOf( withId( R.id.edit_title_name ),
                        childAtPosition(
                                childAtPosition(
                                        withId( android.R.id.content ),
                                        0 ),
                                0 ),
                        isDisplayed() ) );
        appCompatEditText.perform( click() );

        ViewInteraction appCompatEditText2 = onView(
                allOf( withId( R.id.edit_title_name ),
                        childAtPosition(
                                childAtPosition(
                                        withId( android.R.id.content ),
                                        0 ),
                                0 ),
                        isDisplayed() ) );
        appCompatEditText2.perform( replaceText( "ALC" ), closeSoftKeyboard() );

        ViewInteraction appCompatEditText3 = onView(
                allOf( withId( R.id.edit_description ),
                        childAtPosition(
                                childAtPosition(
                                        withId( android.R.id.content ),
                                        0 ),
                                1 ),
                        isDisplayed() ) );
        appCompatEditText3.perform( replaceText( "challenge" ), closeSoftKeyboard() );

        ViewInteraction appCompatButton = onView(
                allOf( withId( R.id.Button_Save ), withText( "Save" ),
                        childAtPosition(
                                childAtPosition(
                                        withId( android.R.id.content ),
                                        0 ),
                                2 ),
                        isDisplayed() ) );
        appCompatButton.perform( click() );

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep( 3557249 );
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction recyclerView = onView(
                allOf( withId( R.id.entry_list ),
                        childAtPosition(
                                withClassName( is( "android.widget.RelativeLayout" ) ),
                                0 ) ) );
        recyclerView.perform( actionOnItemAtPosition( 3, click() ) );

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep( 3590627 );
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        ViewInteraction appCompatButton2 = onView(
                allOf( withId( R.id.Button_Delete ), withText( "Delete" ),
                        childAtPosition(
                                allOf( withId( R.id.linearlayout ),
                                        childAtPosition(
                                                withId( android.R.id.content ),
                                                0 ) ),
                                3 ),
                        isDisplayed() ) );
        appCompatButton2.perform( click() );

        // Added a sleep statement to match the app's execution delay.
        // The recommended way to handle such scenarios is to use Espresso idling resources:
        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
        try {
            Thread.sleep( 3593881 );
        } catch (InterruptedException e) {
            e.printStackTrace();
        }

        openActionBarOverflowOrOptionsMenu( getInstrumentation().getTargetContext() );

        ViewInteraction appCompatTextView = onView(
                allOf( withId( R.id.title ), withText( "Log Out" ),
                        childAtPosition(
                                childAtPosition(
                                        withClassName( is( "android.support.v7.view.menu.ListMenuItemView" ) ),
                                        0 ),
                                0 ),
                        isDisplayed() ) );
        appCompatTextView.perform( click() );

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText( "Child at position " + position + " in parent " );
                parentMatcher.describeTo( description );
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches( parent )
                        && view.equals( ((ViewGroup) parent).getChildAt( position ) );
            }
        };
    }
}
